<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="transaction_crud_update">Update</string>
    <string name="transaction_crud_create">Create</string>

    <string name="menu_transactions">Transactions</string>
    <string name="menu_import_export_db">Import/Export Database</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="month_year_title" formatted="false">%1s %2d</string>
    <string name="add_transaction_desc">Add Transaction</string>
    <string name="year_title">%1d</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transaction_amount_hint">Amount</string>
    <string name="transaction_comment_hint">Comment</string>

    <!--  Time Span Selection Bar  -->
    <string name="year_sel">Year</string>
    <string name="month_sel">Month</string>
    <string name="week_sel">Week</string>
    <string name="day_sel">Day</string>
    <string name="custom_sel">Custom</string>
    <string name="edit_date">Edit Date</string>
    <string name="subtract_selected_time_span">Subtract selected time span</string>
    <string name="add_selected_time_span">Add selected time span</string>
    <string name="category_icon">Category Icon</string>
    <string name="opens_drawer_menu">opens drawer menu</string>

    <!--  CSV import/export view -->
    <string name="import_csv">Import CSV</string>
    <string name="export_csv">Export CSV</string>
    <string name="import_export_db">Import/Export Database</string>
</resources>